Added more heap for the SDK JVM.